--- a/windowsservercore/Dockerfile
+++ b/windowsservercore/Dockerfile
@@ -3,6 +3,7 @@ FROM microsoft/windowsservercore:ltsc2016
 RUN powershell -Command \
     netsh interface ipv4 show interfaces ; \
     netsh interface ipv4 set subinterface 18 mtu=1460 store=persistent ; \
+    netsh interface ipv4 show interfaces ; \
     Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1')) ; \
     choco install -y git ; \
     Remove-Item C:\ProgramData\chocolatey\logs -Force -Recurse ; \
