improvement: add flags to powershell command

--- a/windowsservercore/Dockerfile
+++ b/windowsservercore/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2019
 
-RUN powershell -Command \
+RUN powershell -NoLogo -NoProfile -Command \
     netsh interface ipv4 show interfaces ; \
     netsh interface ipv4 set subinterface 18 mtu=1460 store=persistent ; \
     netsh interface ipv4 show interfaces ; \
