Add msys2 to cmake image

--- a/contrib/cmake/Dockerfile
+++ b/contrib/cmake/Dockerfile
@@ -1,3 +1,8 @@
 FROM cirrusci/windowsservercore:2019
 
-RUN choco install -y --no-progress --installargs 'ADD_CMAKE_TO_PATH=System' visualstudio2017community visualstudio2017-workload-vctools mingw cmake 
+RUN choco install -y --no-progress --installargs 'ADD_CMAKE_TO_PATH=System' \
+    visualstudio2017community \
+    visualstudio2017-workload-vctools \
+    mingw \
+    cmake \
+    msys2
