--- a/contrib/cmake/Dockerfile
+++ b/contrib/cmake/Dockerfile
@@ -5,4 +5,5 @@ RUN choco install -y --no-progress --installargs 'ADD_CMAKE_TO_PATH=System' \
     visualstudio2017-workload-vctools \
     mingw \
     cmake \
-    msys2
+    msys2 \
+    diffutils
