--- a/contrib/cmake/Dockerfile
+++ b/contrib/cmake/Dockerfile
@@ -7,4 +7,4 @@ RUN powershell -NoLogo -NoProfile -Command \
     choco install -y --no-progress visualstudio2019community visualstudio2019buildtools
 
 RUN powershell -NoLogo -NoProfile -Command \
-    choco install -y --no-progress --installargs 'ADD_CMAKE_TO_PATH=System' mingw cmake msys2
+    choco install -y --no-progress --installargs 'ADD_CMAKE_TO_PATH=System' mingw cmake msys2 || echo "ignore reboot request"
