--- a/contrib/cmake/Dockerfile
+++ b/contrib/cmake/Dockerfile
@@ -6,7 +6,9 @@ FROM cirrusci/windowsservercore:2019
 RUN powershell -NoLogo -NoProfile -Command \
     choco feature disable -n=usePackageExitCodes ; \
     choco install -y --no-progress --version=16.8.2.0 visualstudio2019buildtools ; \
-    choco install -y --no-progress --version=1.0.0 visualstudio2019-workload-vctools --parameters="--includeOptional"
+    choco install -y --no-progress --version=1.0.0 visualstudio2019-workload-vctools --parameters="--includeOptional" ; \
+    Remove-Item C:\ProgramData\chocolatey\logs\*.* -Force -Recurse ; \
+    Remove-Item C:\Users\ContainerAdministrator\AppData\Local\Temp\*.* -Force -Recurse
 
 RUN powershell -NoLogo -NoProfile -Command \
     choco install -y --no-progress cmake --install-arguments="ADD_CMAKE_TO_PATH=System" ; \
