Separate visualstudio2019buildtools and visualstudio2019-workload-vctools in different layears

--- a/contrib/visualstudio2019/Dockerfile
+++ b/contrib/visualstudio2019/Dockerfile
@@ -6,6 +6,11 @@ FROM cirrusci/windowsservercore:2019
 RUN powershell -NoLogo -NoProfile -Command \
     choco feature disable -n=usePackageExitCodes ; \
     choco install -y --no-progress visualstudio2019buildtools ; \
+    Remove-Item C:\ProgramData\chocolatey\logs\*.* -Force -Recurse ; \
+    Remove-Item C:\Users\ContainerAdministrator\AppData\Local\Temp\*.* -Force -Recurse
+
+RUN powershell -NoLogo -NoProfile -Command \
+    choco feature disable -n=usePackageExitCodes ; \
     choco install -y --no-progress visualstudio2019-workload-vctools --package-parameters "--includeOptional" ; \
     Remove-Item C:\ProgramData\chocolatey\logs\*.* -Force -Recurse ; \
     Remove-Item C:\Users\ContainerAdministrator\AppData\Local\Temp\*.* -Force -Recurse
