Clean cache / temporary data more thoroughly.
The .nupkg files removed are chocolatey's installation packages...

Fixes: #24

--- a/contrib/cmake/Dockerfile
+++ b/contrib/cmake/Dockerfile
@@ -6,5 +6,6 @@ FROM cirrusci/windowsservercore:visualstudio2019
 RUN powershell -NoLogo -NoProfile -Command \
     choco install -y --no-progress cmake --install-arguments="ADD_CMAKE_TO_PATH=System" ; \
     choco install -y --no-progress mingw gcc; \
-    Remove-Item C:\ProgramData\chocolatey\logs\*.* -Force -Recurse ; \
-    Remove-Item C:\Users\ContainerAdministrator\AppData\Local\Temp\*.* -Force -Recurse
+    Remove-Item C:\ProgramData\chocolatey\logs\* -Force -Recurse ; \
+    Remove-Item $Env:localappdata\Nuget\Cache\*nupkg ; \
+    Remove-Item $Env:temp\* -Force -Recurse
