--- a/windowsservercore/Dockerfile
+++ b/windowsservercore/Dockerfile
@@ -9,5 +9,6 @@ RUN powershell -NoLogo -NoProfile -Command \
     Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1')) ; \
     choco install -y --no-progress git --parameters="/GitAndUnixToolsOnPath" ; \
     choco install -y --no-progress 7zip ; \
-    Remove-Item C:\ProgramData\chocolatey\logs\*.* -Force -Recurse ; \
-    Remove-Item C:\Users\ContainerAdministrator\AppData\Local\Temp\*.* -Force -Recurse
+    Remove-Item C:\ProgramData\chocolatey\logs\* -Force -Recurse ; \
+    Remove-Item $Env:localappdata\Nuget\Cache\*nupkg ; \
+    Remove-Item $Env:temp\* -Force -Recurse
