Build images only on tags
With this approach we'll create `<yaer>.<month>` tags once in a while to keep the dependencies up-to-date. Such tags will also help customers to increase cache hit rate by using pinned tags in their own Dockerfiles.

Related to https://github.com/cirruslabs/cirrus-ci-docs/issues/947

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,12 +5,13 @@ environment:
 timeout_in: 3h
 
 windows_docker_builder:
+  only_if: $CIRRUS_TAG != ''
   use_compute_credits: true
   platform: windows
   os_version: 2019
   info_script: docker info
   pull_script: docker pull mcr.microsoft.com/dotnet/framework/runtime:4.8-windowsservercore-ltsc2019
-  build_core_script: docker build -m 2GB --tag cirrusci/windowsservercore:2019 windowsservercore
-  build_visualstudio_script: docker build -m 2GB --tag cirrusci/windowsservercore:visualstudio2019 contrib/visualstudio2019
-  build_cmake_script: docker build -m 2GB --tag cirrusci/windowsservercore:cmake contrib/cmake
+  build_core_script: docker build -m 2GB --tag cirrusci/windowsservercore:2019 --tag cirrusci/windowsservercore:2019-$CIRRUS_TAG windowsservercore
+  build_visualstudio_script: docker build -m 2GB --tag cirrusci/windowsservercore:visualstudio2019 --tag cirrusci/windowsservercore:visualstudio2019-$CIRRUS_TAG contrib/visualstudio2019
+  build_cmake_script: docker build -m 2GB --tag cirrusci/windowsservercore:cmake --tag cirrusci/windowsservercore:cmake-$CIRRUS_TAG contrib/cmake
   push_script: push_docker.bat
